--- a/src/static/form.module.css
+++ b/src/static/form.module.css
@@ -1,5 +1,5 @@
 .form {
-  background-color: aquamarine;
+  /* background-color: aquamarine; */
   margin-top: 20px;
   width: 40%;
   display: flex;
