--- a/src/static/form.module.css
+++ b/src/static/form.module.css
@@ -1,21 +1,40 @@
 .form {
+  width: 40%;
+}
+.form2 {
+  width: 60%;
+}
+.form,
+.form2 {
   /* background-color: aquamarine; */
   margin-top: 20px;
-  width: 40%;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.form > label {
+.form > label,
+.form2 > label {
   padding: 10px;
+}
+.form > label {
   font-size: 1.4rem;
+}
+.form2 > label {
+  font-size: 1.1rem;
+  /* background-color: pink; */
+}
+.form > input[type="text"],
+.form2 > input[type="text"] {
+  padding: 10px;
 }
 .form > input[type="text"] {
   width: 65%;
-  padding: 10px;
-  /* outline: none; */
 }
-.form > input[type="submit"] {
+.form2 > input[type="text"] {
+  width: 20%;
+}
+.form > input[type="submit"],
+.form2 > input[type="submit"] {
   width: 20%;
   padding: 10px;
   background-color: azure;
